--- a/JsonAnalyzer/JsonAnalyzer/Resources.resx
+++ b/JsonAnalyzer/JsonAnalyzer/Resources.resx
@@ -118,15 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Type names should be all uppercase.</value>
+    <value>Property should have "JsonProperty" attribute.</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
-  <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Class contains properties, that not marked as JsonProperty</value>
-    <comment>The format-able message the diagnostic displays.</comment>
-  </data>
   <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Class contains properties, that not marked as JsonProperty</value>
+    <value>Class contains properties, that not marked as "JsonProperty"</value>
     <comment>The title of the diagnostic.</comment>
   </data>
 </root>
